force-app/main/default/objects/OrderItem__c/OrderItem__c.object-meta.xml
<CustomObject>
    <description>[a0C][OrderItem__c] Itens dos pedidos da organização.</description>
    <label>Item da ordem</label>
    <nameField>
        <displayFormat>IT-{000000000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da ordem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>