force-app/main/default/objects/OrderItem__c/fields/BottleneckDaysNmb__c.field-meta.xml
<CustomField>
    <fullName>BottleneckDaysNmb__c</fullName>
    <description>Número de dias em gargalo, recebido via integração. Deve ser mapeado para um semáforo</description>
    <label>Dias de Gargalo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>