force-app/main/default/objects/OrderItem__c/fields/BX13__c.field-meta.xml
<CustomField>
    <fullName>BX13__c</fullName>
    <label>ICMS Inicial</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>