force-app/main/default/objects/OrderItem__c/fields/BX23__c.field-meta.xml
<CustomField>
    <fullName>BX23__c</fullName>
    <label>IPI Inicial</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>