force-app/main/default/objects/OrderItem__c/fields/BX41__c.field-meta.xml
<CustomField>
    <fullName>BX41__c</fullName>
    <label>ST Inicial</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>