force-app/main/default/objects/OrderItem__c/fields/CarrierLkp__c.field-meta.xml
<CustomField>
    <fullName>CarrierLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportador</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Itens da ordem</relationshipLabel>
    <relationshipName>Itens_da_ordem</relationshipName>
    <type>Lookup</type>
</CustomField>