force-app/main/default/objects/OrderItem__c/fields/ClientMaterialTxt__c.field-meta.xml
<CustomField>
    <fullName>ClientMaterialTxt__c</fullName>
    <label>N° produto do cliente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>