force-app/main/default/objects/OrderItem__c/fields/CSVPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>CSVPriceNmb__c</fullName>
    <label>Preço CSV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>