force-app/main/default/objects/OrderItem__c/fields/DeltaGainFml__c.field-meta.xml
<CustomField>
    <fullName>DeltaGainFml__c</fullName>
    <formula>RelativeGainFml__c - ZGAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta do Ganho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>