force-app/main/default/objects/OrderItem__c/fields/DenominationTxt__c.field-meta.xml
<CustomField>
    <fullName>DenominationTxt__c</fullName>
    <label>Denominação</label>
    <length>40</length>
    <type>Text</type>
</CustomField>