force-app/main/default/objects/OrderItem__c/fields/DiscountNmb__c.field-meta.xml
<CustomField>
    <fullName>DiscountNmb__c</fullName>
    <description>Campo de desconto usado no mobile</description>
    <label>Desconto Mobile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>