force-app/main/default/objects/OrderItem__c/fields/DistributionCenterTxt__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenterTxt__c</fullName>
    <label>Centro de Distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DistributionCenter</valueSetName>
    </valueSet>
</CustomField>