force-app/main/default/objects/OrderItem__c/fields/EANUPCCodeFml__c.field-meta.xml
<CustomField>
    <fullName>EANUPCCodeFml__c</fullName>
    <formula>ProductLkp__r.IndividualEANTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo em informado em Produtos.</inlineHelpText>
    <label>Código EAN/ código de barras</label>
    <type>Text</type>
</CustomField>