force-app/main/default/objects/OrderItem__c/fields/ErrorMessageTxt__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageTxt__c</fullName>
    <description>Mensagens de erro na integração</description>
    <label>Mensagens de Erro</label>
    <length>250</length>
    <type>Text</type>
</CustomField>