force-app/main/default/objects/OrderItem__c/fields/ExpeditionCenterLkp__c.field-meta.xml
<CustomField>
    <fullName>ExpeditionCenterLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local de Expedição</label>
    <referenceTo>ExpeditionCenter__c</referenceTo>
    <relationshipLabel>Itens da ordem</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>