force-app/main/default/objects/OrderItem__c/fields/ExpeditionPointTxt__c.field-meta.xml
<CustomField>
    <fullName>ExpeditionPointTxt__c</fullName>
    <label>Local de expedição</label>
    <length>4</length>
    <type>Text</type>
</CustomField>