force-app/main/default/objects/OrderItem__c/fields/FinalPriceFml__c.field-meta.xml
<CustomField>
    <fullName>FinalPriceFml__c</fullName>
    <formula>OrderQuantityNmb__c *  UnitPriceIPINmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>