force-app/main/default/objects/OrderItem__c/fields/FlagBottleneckFml__c.field-meta.xml
<CustomField>
    <fullName>FlagBottleneckFml__c</fullName>
    <formula>IF(ISNULL( TotalGrossCostNmb__c ),
IMAGE(&quot;/img/samples/rating3.gif&quot;, &quot;Em Processamento&quot;, 16, 16), 
IF(BottleneckDaysNmb__c = 0 || BottleneckDaysNmb__c = NULL, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;OK&quot;, 16,16),
IF(BottleneckDaysNmb__c &lt; 20,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Gargalo - até 20 dias&quot;, 16,16),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Gargalo - acima de 20 dias&quot;, 16,16))))</formula>
    <label>Flag Gargalo</label>
    <type>Text</type>
</CustomField>