force-app/main/default/objects/OrderItem__c/fields/FlagItemErrorFml__c.field-meta.xml
<CustomField>
    <fullName>FlagItemErrorFml__c</fullName>
    <formula>IF(ISNULL(TotalGrossCostNmb__c) &amp;&amp; ErrorMessageTxt__c = NULL, IMAGE(&quot;/img/samples/rating3.gif&quot;, &quot;Em Processamento&quot;, 16, 16), 
IF(ErrorMessageTxt__c = NULL, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;OK&quot;, 16,16),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, ErrorMessageTxt__c, 16,16)))</formula>
    <label>Flag Erro no Item</label>
    <type>Text</type>
</CustomField>