force-app/main/default/objects/OrderItem__c/fields/FlagMinPriceFml__c.field-meta.xml
<CustomField>
    <fullName>FlagMinPriceFml__c</fullName>
    <formula>IF(ISNULL(TotalGrossCostNmb__c), IMAGE(&quot;/img/samples/rating3.gif&quot;, &quot;Em Processamento&quot;, 16, 16), 
IF(UnitPriceNmb__c &lt; ZMIN__c, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Abaixo do Preço Mínimo&quot;, 16,16), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;OK&quot;, 16,16)))</formula>
    <label>Flag Preço Mínimo</label>
    <type>Text</type>
</CustomField>