force-app/main/default/objects/OrderItem__c/fields/InvoiceAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmountNmb__c</fullName>
    <label>Quantidade Faturada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>