force-app/main/default/objects/OrderItem__c/fields/InvoiceDateDte__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDateDte__c</fullName>
    <description>Preenchido via mapa de integração</description>
    <label>Data de Faturamento</label>
    <type>Date</type>
</CustomField>