force-app/main/default/objects/OrderItem__c/fields/InvoiceRemainingFml__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRemainingFml__c</fullName>
    <formula>OrderQuantityNmb__c - InvoiceAmountNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Faturamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>