force-app/main/default/objects/OrderItem__c/fields/IPIPercentFml__c.field-meta.xml
<CustomField>
    <fullName>IPIPercentFml__c</fullName>
    <formula>ValueIPI__c / ValueROBFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>