force-app/main/default/objects/OrderItem__c/fields/IPIValueFml__c.field-meta.xml
<CustomField>
    <fullName>IPIValueFml__c</fullName>
    <formula>IF ((LiquidIPINmb__c - LiquidNmb__c)&gt;0,(LiquidIPINmb__c - LiquidNmb__c)*  OrderQuantityNmb__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>