force-app/main/default/objects/OrderItem__c/fields/ItemNumberTxt__c.field-meta.xml
<CustomField>
    <fullName>ItemNumberTxt__c</fullName>
    <description>Campo que vai armazenar o número do item, via código será incrementado de dez em dez, com os respectivos zeros à esquerda</description>
    <label>Número do Item</label>
    <length>6</length>
    <type>Text</type>
</CustomField>