force-app/main/default/objects/OrderItem__c/fields/ItemTotalFml__c.field-meta.xml
<CustomField>
    <fullName>ItemTotalFml__c</fullName>
    <formula>OrderQuantityNmb__c * LiquidNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>