force-app/main/default/objects/OrderItem__c/fields/ItineraryTxt__c.field-meta.xml
<CustomField>
    <fullName>ItineraryTxt__c</fullName>
    <label>Itinerário</label>
    <length>6</length>
    <type>Text</type>
</CustomField>