force-app/main/default/objects/OrderItem__c/fields/LastPurchaseAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseAmountNmb__c</fullName>
    <label>Quantidade da Última Compra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>