force-app/main/default/objects/OrderItem__c/fields/LastPurchaseDateDte__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseDateDte__c</fullName>
    <label>Data da Última Compra</label>
    <type>Date</type>
</CustomField>