force-app/main/default/objects/OrderItem__c/fields/LastPurchaseLiquidNmb__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseLiquidNmb__c</fullName>
    <description>Valor da última compra, sem IPI, recebido via integração</description>
    <label>Valor Líquido da Última Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>