force-app/main/default/objects/OrderItem__c/fields/LiquidIPINmb__c.field-meta.xml
<CustomField>
    <fullName>LiquidIPINmb__c</fullName>
    <description>Valor líquido com IPI, vem via integração</description>
    <label>Preço C/ IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>