force-app/main/default/objects/OrderItem__c/fields/LiquidNmb__c.field-meta.xml
<CustomField>
    <fullName>LiquidNmb__c</fullName>
    <label>Valor líquido</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>