force-app/main/default/objects/OrderItem__c/fields/LucreCenterTxt__c.field-meta.xml
<CustomField>
    <fullName>LucreCenterTxt__c</fullName>
    <label>Centro de lucro</label>
    <length>10</length>
    <type>Text</type>
</CustomField>