force-app/main/default/objects/OrderItem__c/fields/MaterialGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroupTxt__c</fullName>
    <label>Grupo de Material</label>
    <length>18</length>
    <type>Text</type>
</CustomField>