force-app/main/default/objects/OrderItem__c/fields/OrderMdt__c.field-meta.xml
<CustomField>
    <fullName>OrderMdt__c</fullName>
    <label>Número da ordem</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Itens da ordem</relationshipLabel>
    <relationshipName>Itens_da_ordem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>