force-app/main/default/objects/OrderItem__c/fields/OrderQuantityNmb__c.field-meta.xml
<CustomField>
    <fullName>OrderQuantityNmb__c</fullName>
    <label>Quantidade</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>