force-app/main/default/objects/OrderItem__c/fields/OriginalQuantityNmb__c.field-meta.xml
<CustomField>
    <fullName>OriginalQuantityNmb__c</fullName>
    <description>Quantidade no momento que o item é inserido no pedido, para comparar valores totais vindos do SAP</description>
    <label>Quantidade Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>