force-app/main/default/objects/OrderItem__c/fields/OriginalROBNoIPINmb__c.field-meta.xml
<CustomField>
    <fullName>OriginalROBNoIPINmb__c</fullName>
    <label>ROB s/ IPI Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>