force-app/main/default/objects/OrderItem__c/fields/PaymentConditionTxt__c.field-meta.xml
<CustomField>
    <fullName>PaymentConditionTxt__c</fullName>
    <label>Cond.pgto.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>