force-app/main/default/objects/OrderItem__c/fields/ProductCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeTxt__c</fullName>
    <description>Preenchido via Workflow</description>
    <label>Código do Produto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>