force-app/main/default/objects/OrderItem__c/fields/ProductLkp__c.field-meta.xml
<CustomField>
    <fullName>ProductLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da ordem</relationshipLabel>
    <relationshipName>Itens_da_ordem</relationshipName>
    <type>Lookup</type>
</CustomField>