force-app/main/default/objects/OrderItem__c/fields/ProductNameFml__c.field-meta.xml
<CustomField>
    <fullName>ProductNameFml__c</fullName>
    <formula>ProductLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Produto</label>
    <type>Text</type>
</CustomField>