force-app/main/default/objects/OrderItem__c/fields/PVCPriceIPINmb__c.field-meta.xml
<CustomField>
    <fullName>PVCPriceIPINmb__c</fullName>
    <description>Preço após políticas PVC, aplicadas sobre o preço com IPI</description>
    <label>Preço com Política e IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>