force-app/main/default/objects/OrderItem__c/fields/PVCPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>PVCPriceNmb__c</fullName>
    <description>Campo que armazena o preço líquido após aplicação de descontos de política PVC</description>
    <label>Preço com Política</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>