force-app/main/default/objects/OrderItem__c/fields/RejectionReasonTxt__c.field-meta.xml
<CustomField>
    <fullName>RejectionReasonTxt__c</fullName>
    <label>Motivo da recusa</label>
    <length>2</length>
    <type>Text</type>
</CustomField>