force-app/main/default/objects/OrderItem__c/fields/RelativeGainFml__c.field-meta.xml
<CustomField>
    <fullName>RelativeGainFml__c</fullName>
    <formula>ValueGainFml__c /  ValueROLFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ganho Relativo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>