force-app/main/default/objects/OrderItem__c/fields/Remittance1DateDte__c.field-meta.xml
<CustomField>
    <fullName>Remittance1DateDte__c</fullName>
    <label>1ª data de remessa</label>
    <type>Date</type>
</CustomField>