force-app/main/default/objects/OrderItem__c/fields/RemittanceGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>RemittanceGroupTxt__c</fullName>
    <label>Grupo remessa</label>
    <length>6</length>
    <type>Text</type>
</CustomField>