force-app/main/default/objects/OrderItem__c/fields/StatusNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>StatusNumberNmb__c</fullName>
    <description>O status do item equivale a um valor numérico e este campo guarda esse valor.</description>
    <label>Número do status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>