force-app/main/default/objects/OrderItem__c/fields/STValueFml__c.field-meta.xml
<CustomField>
    <fullName>STValueFml__c</fullName>
    <formula>(UnitPriceIPINmb__c -  LiquidIPINmb__c) *  OrderQuantityNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>