force-app/main/default/objects/OrderItem__c/fields/SyncedSAPBln__c.field-meta.xml
<CustomField>
    <fullName>SyncedSAPBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setado via mapa de integração para indicar que o pedido já foi sincronizado do SAP para o SF</description>
    <label>Sincronizado SAP</label>
    <type>Checkbox</type>
</CustomField>