force-app/main/default/objects/OrderItem__c/fields/TotalGrossCostNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossCostNmb__c</fullName>
    <label>Valor total bruto</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>