force-app/main/default/objects/OrderItem__c/fields/TotalNetWeightKgNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalNetWeightKgNmb__c</fullName>
    <label>Peso Líquido Total (Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>