force-app/main/default/objects/OrderItem__c/fields/TotalZCOT__c.field-meta.xml
<CustomField>
    <fullName>TotalZCOT__c</fullName>
    <formula>(ValueROBNoIPIFml__c / (1 - ZCOT__c)) - ValueROBNoIPIFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto de Cotação Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>