force-app/main/default/objects/OrderItem__c/fields/UMTxt__c.field-meta.xml
<CustomField>
    <fullName>UMTxt__c</fullName>
    <label>Unidade de medida</label>
    <length>3</length>
    <type>Text</type>
</CustomField>