force-app/main/default/objects/OrderItem__c/fields/UnitNetWeightKgFml__c.field-meta.xml
<CustomField>
    <fullName>UnitNetWeightKgFml__c</fullName>
    <formula>IF(
   ProductLkp__r.UnitWeightTxt__c = &apos;G&apos;,
   ProductLkp__r.LiquidWeightNmb__c * 0.001,
   ProductLkp__r.LiquidWeightNmb__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso Líquido Unitário (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>