force-app/main/default/objects/OrderItem__c/fields/UnitPriceIPINmb__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceIPINmb__c</fullName>
    <description>Preço final, com descontos, aplicados sobre o preço com Política e IPI</description>
    <label>Preço Final com IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>