force-app/main/default/objects/OrderItem__c/fields/UnitPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceNmb__c</fullName>
    <description>Preço final, com descontos aplicados sobre o preço com Política</description>
    <label>Preço Final Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>