force-app/main/default/objects/OrderItem__c/fields/UnitValueROBFml__c.field-meta.xml
<CustomField>
    <fullName>UnitValueROBFml__c</fullName>
    <formula>ValueROBFml__c /  OrderQuantityNmb__c</formula>
    <label>Un. Valor NF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>