force-app/main/default/objects/OrderItem__c/fields/UnitValueROLFml__c.field-meta.xml
<CustomField>
    <fullName>UnitValueROLFml__c</fullName>
    <formula>ValueROLFml__c /  OrderQuantityNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Un. Valor Líquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>