force-app/main/default/objects/OrderItem__c/fields/ValueGainFml__c.field-meta.xml
<CustomField>
    <fullName>ValueGainFml__c</fullName>
    <formula>IF(OriginalQuantityNmb__c != 0, 
(( ZGAB__c/ OriginalQuantityNmb__c ) - (LiquidNmb__c/OriginalQuantityNmb__c - ValueROLFml__c/OrderQuantityNmb__c)) * OrderQuantityNmb__c ,
ZGAB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ganho Absoluto Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>