force-app/main/default/objects/OrderItem__c/fields/ValueICMS__c.field-meta.xml
<CustomField>
    <fullName>ValueICMS__c</fullName>
    <formula>IF(OriginalQuantityNmb__c != 0 &amp;&amp; SyncedSAPBln__c = false, 
( BX13__c / OriginalQuantityNmb__c ) * OrderQuantityNmb__c * (1 - ZPRO__c) * (1 - ZCOT__c) * (1 - ZPVO__c) * (1 - ZVJ1__c) * (1 - ZPME__c) * (1 - ZPSO__c) * (1 - XXES__c) * (1 - ZPXI__c),
BX13__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICMS Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>