force-app/main/default/objects/OrderItem__c/fields/ValueIPI__c.field-meta.xml
<CustomField>
    <fullName>ValueIPI__c</fullName>
    <description>Valor final do IPI, fazendo regra de três com o valor recebido do SAP</description>
    <formula>IF(OriginalQuantityNmb__c != 0 &amp;&amp; !SyncedSAPBln__c, 
( BX23__c / OriginalQuantityNmb__c ) * OrderQuantityNmb__c * (1 - ZPRO__c) * (1 - ZCOT__c) * (1 - ZPVO__c) * (1 - ZVJ1__c) * (1 - ZPME__c) * (1 - ZPSO__c) * (1 - XXES__c), 
BX23__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPI Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>