force-app/main/default/objects/OrderItem__c/fields/ValueST__c.field-meta.xml
<CustomField>
    <fullName>ValueST__c</fullName>
    <formula>IF(OriginalQuantityNmb__c != 0 &amp;&amp; SyncedSAPBln__c = false, 
( BX41__c / OriginalQuantityNmb__c ) * OrderQuantityNmb__c * (1 - ZPRO__c) * (1 - ZCOT__c) * (1 - ZPVO__c) * (1 - ZVJ1__c) * (1 - ZPME__c) * (1 - ZPSO__c) * (1 - XXES__c), 
BX41__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ST Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>