force-app/main/default/objects/OrderItem__c/fields/WarehouseTxt__c.field-meta.xml
<CustomField>
    <fullName>WarehouseTxt__c</fullName>
    <label>Depósito</label>
    <length>4</length>
    <type>Text</type>
</CustomField>