force-app/main/default/objects/OrderItem__c/fields/XXES__c.field-meta.xml
<CustomField>
    <fullName>XXES__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Desconto estratégico de até 5%</description>
    <label>Desconto Estratégico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>