force-app/main/default/objects/OrderItem__c/fields/YCOT__c.field-meta.xml
<CustomField>
    <fullName>YCOT__c</fullName>
    <description>Desconto limite de cotação, recebido via integração</description>
    <label>Desconto de Cotação Máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>