force-app/main/default/objects/OrderItem__c/fields/YGAN__c.field-meta.xml
<CustomField>
    <fullName>YGAN__c</fullName>
    <formula>ZGAN__c * ValueROLFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ganho Referência Absoluto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>