force-app/main/default/objects/OrderItem__c/fields/YPMI__c.field-meta.xml
<CustomField>
    <fullName>YPMI__c</fullName>
    <label>Meta mínima de Conexões</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>