force-app/main/default/objects/OrderItem__c/fields/YPMX__c.field-meta.xml
<CustomField>
    <fullName>YPMX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica se o pedido excede a meta de produtos Runner, bloqueando outros descontos de serem aplicados</description>
    <label>Excedeu Runner</label>
    <type>Checkbox</type>
</CustomField>