force-app/main/default/objects/OrderItem__c/fields/YPRO__c.field-meta.xml
<CustomField>
    <fullName>YPRO__c</fullName>
    <description>Limite do desconto Promocional</description>
    <label>Desconto Promocional Máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>