force-app/main/default/objects/OrderItem__c/fields/YRME__c.field-meta.xml
<CustomField>
    <fullName>YRME__c</fullName>
    <description>Desconto do PVC referente à meta de conexões</description>
    <label>Desconto Meta Conexão Liberado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>