force-app/main/default/objects/OrderItem__c/fields/YRSO__c.field-meta.xml
<CustomField>
    <fullName>YRSO__c</fullName>
    <description>Desconto PVC referente a produtos da Cesta de Produtos Especiais</description>
    <label>Desconto CPE Liberado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>