force-app/main/default/objects/OrderItem__c/fields/YRVO__c.field-meta.xml
<CustomField>
    <fullName>YRVO__c</fullName>
    <description>Desconto PVC liberado por valor do pedido</description>
    <label>Desconto de Volume Liberado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>