force-app/main/default/objects/OrderItem__c/fields/YRXI__c.field-meta.xml
<CustomField>
    <fullName>YRXI__c</fullName>
    <description>Desconto do PVC referente a produtos de Mix Irriga</description>
    <label>Desconto Mix Irriga Liberado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>