force-app/main/default/objects/OrderItem__c/fields/YVJ1__c.field-meta.xml
<CustomField>
    <fullName>YVJ1__c</fullName>
    <label>Desconto Canal Varejo Habilitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>