force-app/main/default/objects/OrderItem__c/fields/ZCOT__c.field-meta.xml
<CustomField>
    <fullName>ZCOT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Desconto aplicado em cotação</description>
    <label>Desconto de Cotação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>