force-app/main/default/objects/OrderItem__c/fields/ZCPG__c.field-meta.xml
<CustomField>
    <fullName>ZCPG__c</fullName>
    <label>Desconto Financeiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>