force-app/main/default/objects/OrderItem__c/fields/ZGAB__c.field-meta.xml
<CustomField>
    <fullName>ZGAB__c</fullName>
    <description>Condition do SAP que contém o ganho inicial do item</description>
    <label>Ganho Absoluto Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>