force-app/main/default/objects/OrderItem__c/fields/ZGAN__c.field-meta.xml
<CustomField>
    <fullName>ZGAN__c</fullName>
    <label>Ganho Referência</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>