force-app/main/default/objects/OrderItem__c/fields/ZMIN__c.field-meta.xml
<CustomField>
    <fullName>ZMIN__c</fullName>
    <description>Preço mínimo do item. Vem via integração</description>
    <label>Preço Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>