force-app/main/default/objects/OrderItem__c/fields/ZPME__c.field-meta.xml
<CustomField>
    <fullName>ZPME__c</fullName>
    <label>Desconto Meta Conexão Praticado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>