force-app/main/default/objects/OrderItem__c/fields/ZPRO__c.field-meta.xml
<CustomField>
    <fullName>ZPRO__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Desconto promocional aplicado. Limitado pelo campo YPRO</description>
    <label>Desconto Promocional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>