force-app/main/default/objects/OrderItem__c/fields/ZPSO__c.field-meta.xml
<CustomField>
    <fullName>ZPSO__c</fullName>
    <label>Desconto CPE Praticado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>