force-app/main/default/objects/OrderItem__c/fields/ZPVC__c.field-meta.xml
<CustomField>
    <fullName>ZPVC__c</fullName>
    <description>Desconto PVC de canal</description>
    <label>Desconto de Canal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>