force-app/main/default/objects/OrderItem__c/fields/ZPVO__c.field-meta.xml
<CustomField>
    <fullName>ZPVO__c</fullName>
    <label>Desconto de Volume Praticado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>