force-app/main/default/objects/OrderItem__c/fields/ZPXI__c.field-meta.xml
<CustomField>
    <fullName>ZPXI__c</fullName>
    <label>Desconto Mix Irriga Praticado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>