force-app/main/default/objects/OrderItem__c/fields/ZVJ1__c.field-meta.xml
<CustomField>
    <fullName>ZVJ1__c</fullName>
    <label>Desconto Canal Varejo Praticado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>